--- a/src/components/WorkExContent.css
+++ b/src/components/WorkExContent.css
@@ -24,6 +24,10 @@
     margin-top: -17px;
     max-width: 540px;
   }
+
+  .WorkExContentContainer figure a {
+    display: block;
+  }
   
   .WorkExContentContainer figure img {
     width: 100%;
