--- a/src/components/WorkExGrid.css
+++ b/src/components/WorkExGrid.css
@@ -1,6 +1,6 @@
 .WorkExGrid {
-    padding: 0 0 0 0;
-    margin: 100px auto;
+    padding: 0;
+    margin: 80px auto;
   }
   
   .WorkExGridContainer > h2 {
